# nova-api-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_me_after_change.txt  pyproject.toml
my_project/: .env.base  app.py  pyproject.toml
my_project/core/config/: app_config.py  bootstrap.py
my_project/infra/logger/: json_logger.py
my_project/presentation/exception_handlers/: __init__.py  app_exception_handler.py  generic_exception_handler.py
my_project/presentation/routes/: __init__.py  health.py
src/nova_api_core/cli/: app.py  main.py
src/nova_api_core/cli/commands/: crud.py  init.py
src/nova_api_core/cli/context/: config_loader.py
src/nova_api_core/cli/generators/: crud_generator.py  deps_generator.py  model_generator.py  route_generator.py  schema_generator.py  use_case_generator.py
src/nova_api_core/cli/metadata/: db_metadata.py
src/nova_api_core/cli/renderers/: __init__.py  base.py  config.py  database.py  nova_renderer.py  structure.py
src/nova_api_core/core/abstraction/: database_manager.py  error_handler.py  generic_repository.py  logger.py  mongo_repository.py  sqlalchemy_repository.py
src/nova_api_core/core/config/: bootstrap.py  loader.py
src/nova_api_core/core/types/: database_type.py  error.py
src/nova_api_core/core/use_cases/: base_use_case.py
src/nova_api_core/infra/config/: vault_provider.py
src/nova_api_core/infra/logger/: base.py  json_logger.py
src/nova_api_core/presentation/: app_factory.py
src/nova_api_core/presentation/exception_handlers/: app_exception_handler.py  generic_exception_handler.py
tests/unit/: test_app.py  test_app_factory.py
(+31 files in other folders)
